# tidy

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.sh  mock_dir.sh
src/: constants.rs  error.rs  filename_parser.rs  format_parser.rs  lib.rs  main.rs
