[package]
name = "tidy"
version = "0.1.0"
authors = ["Stefan Hengl <stefan@sourcegraph.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
lazy_static = "1.4.0"
convert_case = "0.4.0"
walkdir = "2"
ansi_term = "0.12"
log = "0.4"
